// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input it renders 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 16px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #abb7c2;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #abb7c2;
  box-shadow: 0 0 0 0 #abb7c2;
}

.c0::-webkit-input-placeholder {
  color: #abb7c2;
}

.c0::-moz-placeholder {
  color: #abb7c2;
}

.c0:-ms-input-placeholder {
  color: #abb7c2;
}

.c0::placeholder {
  color: #abb7c2;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<input
  className="c0"
/>
`;

exports[`Input it renders an input element with a really large padding and margin 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 16px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #abb7c2;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #abb7c2;
  box-shadow: 0 0 0 0 #abb7c2;
  margin: 32px;
  padding: 32px;
}

.c0::-webkit-input-placeholder {
  color: #abb7c2;
}

.c0::-moz-placeholder {
  color: #abb7c2;
}

.c0:-ms-input-placeholder {
  color: #abb7c2;
}

.c0::placeholder {
  color: #abb7c2;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<input
  className="c0"
/>
`;

exports[`Input it renders an input element with a red border with a color prop is passed 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 16px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #abb7c2;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #c00;
  box-shadow: 0 0 0 0 #c00;
}

.c0::-webkit-input-placeholder {
  color: #abb7c2;
}

.c0::-moz-placeholder {
  color: #abb7c2;
}

.c0:-ms-input-placeholder {
  color: #abb7c2;
}

.c0::placeholder {
  color: #abb7c2;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #c00;
  box-shadow: 0 0 0 1px #c00;
}

<input
  className="c0"
  color="red"
/>
`;

exports[`Input it renders an input element with large text 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 16px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #abb7c2;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #abb7c2;
  box-shadow: 0 0 0 0 #abb7c2;
}

.c0::-webkit-input-placeholder {
  color: #abb7c2;
}

.c0::-moz-placeholder {
  color: #abb7c2;
}

.c0:-ms-input-placeholder {
  color: #abb7c2;
}

.c0::placeholder {
  color: #abb7c2;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<input
  className="c0"
  fontSize={4}
/>
`;
